# open-deep-research-strands

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  phase2_test_report.json  pyproject.toml  requirements.txt  research_example.py  test_phase2_integration.py  test_supervisor_core.py
.claude/: settings.local.json
.claude_workflow/: design.md  requirements.md  tasks.md
open_deep_research_strands/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
open_deep_research_strands/configs/: agent_settings.py  local_config.py  local_config.py.example
open_deep_research_strands/scripts/: debug_tools.py  setup.py  validate_a2a_communication.py  validate_agents.py  validate_agents_fixed.py  validate_integration.py  validate_setup.py
open_deep_research_strands/src/: __init__.py  exceptions.py
open_deep_research_strands/src/agents/: agent_manager.py  base_agent.py  error_handler.py  quality_controller.py  report_agent.py  research_sub_agent.py  scoping_agent.py  supervisor_agent.py
open_deep_research_strands/src/communication/: agent_communication.py  local_queue.py  message_router.py  messages.py
open_deep_research_strands/src/config/: logging_config.py  secrets_manager.py  strands_config.py  validation_schemas.py
open_deep_research_strands/src/tools/: llm_interface.py  local_memory.py  mock_tools.py
open_deep_research_strands/src/workflows/: swarm_controller.py
open_deep_research_strands/tests/: test_a2a_communication.py  test_basic_agents.py  test_integration.py  test_strands_sdk_setup.py
