[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-deep-research-strands"
version = "0.1.0"
description = "Open Deep Research implementation using Strands Agents"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Open Deep Research Strands Team"},
]
keywords = ["research", "agents", "strands", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Researchers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "strands-agents>=0.1.0",
    "asyncio",
    "aiofiles",
    "pydantic>=2.0.0",
    "python-dotenv",
    "structlog",
    "httpx",
    "openai",
    "anthropic",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "flake8",
]
bedrock = [
    "boto3",
    "bedrock-agentcore",
]

[tool.setuptools.packages.find]
where = ["open_deep_research_strands"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"